# CH32-rs-no-svd2rust

./: Cargo.toml  README  README.md  test.elf
.cargo/: config.toml
ch32-app/: Cargo.toml  build.rs  memory.x
ch32-app/src/: main.rs
ch32-hal/: Cargo.toml
ch32-hal/src/: gpio.rs  lib.rs  pwr.rs  rcc.rs  system.rs
