[package]
name = "ch32-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt ={ version = "*" }
ch32-hal = { workspace = true }
vcell = { workspace = true }

[dependencies.riscv]
version =  "*"
features = ["critical-section-single-hart"]

[dependencies.riscv-rt]
version = "*"