[package]
name = "ch32-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "*" }
riscv = { version = "*" }
bitflags ={ version = "*" }
vcell = { version = "*" }
spin = { version = "*", features = []}
good_memory_allocator = { version = "*" }